fix: 🐛 Reduce gap between links; switch site and global nav to standard case
This fixes an issue where site navigation was compressed and unreadable on smaller screens. Site nav with more than 7 links may break to two lines on some screen widths, but will remain readable.

Site navigation items may break to two lines at some screen widths.

--- a/src/sass/components/_navigation-site.scss
+++ b/src/sass/components/_navigation-site.scss
@@ -1,14 +1,14 @@
 // The main navigation bar on every page
 
 .main-header {
-  margin-bottom: 2em;
+  margin-bottom: 3em;
   position: relative;
 }
 
 .main-navigation {
   margin-bottom: 0;
   .home & {
-    margin-bottom: 1.2em;
+    margin-bottom: 1.5em;
   }
 }
 
@@ -16,7 +16,7 @@
 .site-nav {
   display:flex;
   justify-content: flex-start;
-  gap: 1em  2.5em;
+  gap: 1em  2em;
   padding:0;
   margin:0;
   flex-direction: column;
@@ -34,7 +34,7 @@
     list-style: none;
     font-family: $font-family-sans-serif;
     font-size: 1.1em;
-    text-transform: uppercase;
+    text-transform: none;
     font-weight: 500;
 
     a, span {
@@ -56,7 +56,7 @@
     & > span {
       background: transparent url(../images/down-arrow.svg) no-repeat right 60%;
       background-size: 14px;
-      padding: 0 20px 0 0;
+      padding: 0 16px 0 0;
     }
 
     @include media($small-desktop-plus) {
@@ -94,14 +94,17 @@
     border: 1px solid $brand-light-gray;
     margin: 0;
     width: fit-content;
-    min-width: 14em;
-    margin-top: -1px;
-    padding: 5px 0;
+    min-width: 12em;
+    margin-top: 0;
+    padding: 6px 0;
     position: absolute;
     left: -900em;
 
+    @include module-box-shadow(dark);
+    border-radius: unset;
+
     li {
-      font-size: .8em;
+      font-size: .85em;
       float: none;
       display: block;
       text-align: left;
@@ -109,7 +112,7 @@
 
       a {
         text-transform: none;
-        padding: .25em .75em;
+        padding: .3em .8em;
         border: none;
 
         &:focus,
